# stesting-sc

./: .gitignore  CMakeLists.txt  CONFIG.md  ERRORCODE.md  LICENSE  README.md  build.sh  cfg.json  installSC  main.c
.github/workflows/: cmake.yml
doc/: API.md
inc/: akey.h  can.h  common.h  dna.h  eeprom.h  eth.h  gpio.h  hdmi.h  i2c.h  ll.h  mkey.h  parson.h  sdcard.h  uart.h  unittest.h  usb.h
rpm/: stesting-shared-main-1.aarch64.rpm  stesting-shared-main-1.x86_64.rpm  stesting-shared-v0.0.4-1.aarch64.rpm  stesting-shared-v0.0.4-1.x86_64.rpm  stesting-shared-v0.0.5-1.aarch64.rpm  stesting-shared-v0.0.5-1.x86_64.rpm  stesting-shared-v0.0.6-1.aarch64.rpm  stesting-shared-v0.0.6-1.x86_64.rpm  stesting-shared-v0.0.7-1.aarch64.rpm  stesting-shared-v0.0.7-1.x86_64.rpm  stesting-shared-v0.0.8-1.aarch64.rpm  stesting-shared-v0.0.8-1.x86_64.rpm  stesting-static-main-1.aarch64.rpm  stesting-static-main-1.x86_64.rpm  stesting-static-v0.0.4-1.aarch64.rpm  stesting-static-v0.0.4-1.x86_64.rpm  stesting-static-v0.0.5-1.aarch64.rpm  stesting-static-v0.0.5-1.x86_64.rpm  stesting-static-v0.0.6-1.aarch64.rpm  stesting-static-v0.0.6-1.x86_64.rpm  stesting-static-v0.0.7-1.aarch64.rpm  stesting-static-v0.0.7-1.x86_64.rpm  stesting-static-v0.0.8-1.aarch64.rpm  stesting-static-v0.0.8-1.x86_64.rpm
unit-test/: akey_cfg.json  can_cfg.json  eeprom_cfg.json  eth_cfg.json  hdmi_cfg.json  i2c_cfg.json  mkey_cfg.json  sd_card_cfg.json  uart_cfg.json  usb_cfg.json
